# PROLOD_CompilationPrograms

./: CMakeLists.txt  README.md
Activities/Midterms/: Activity1.c  Activity2.c  Assignment1.c  Exam.c
Exams/: MidtermExam.c
Quizzes/Midterms/: Quiz1.c
